implementando minhas funcoes com cor de fundo

--- a/index2.html
+++ b/index2.html
@@ -10,11 +10,15 @@
   <h1>Introdução a linguagem java script</h1>
   <h2 id="t1">Introdução a linguagem java script</h2>
   <p>Escolha uma cor </p>
-  <select  id="coresfundo" onchange="mudarCorFundo()">
+  <select  id="coresFundo" onChange="mudarCorFundo()">
     <option value="darkred">vermelho escuro</option>
-    <option value="orange">Laranja</option>
+    <option value="darkorange">Laranja</option>
     <option value="black">Preto</option>
     <option value="darkgreen">verde escuro</option>
   </select>
+
+<script src="index2.js">
+
+</script>
 </body>
 </html>
